--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
-    
-    <head></head>
-    <title>Futebol</title>
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width, initial-scale=1"
-    <link rel="stylesheet" href="styles.css"
-<read>
+<html lange="en">
 
-    <body></body>
+<head>
+    <title>Alura Plus</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;&display=swap" real="stylesheet">
+</head>
 
+<body>
+    <selection class="container principal">
+        <div class="container__caixa">
+    <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <ing src="ing/Combo.png" alt="O Combo+ é a junção do Alura+ e Alura Língua" class="container__imagem">
+    <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00</a>
+    <a href="www.alura.com.br"></a>
+    </body>
 </html>
-
-    
