--- a/index.html
+++ b/index.html
@@ -14,7 +14,34 @@
         <div class="container__caixa">
     <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <ing src="ing/Combo.png" alt="O Combo+ é a junção do Alura+ e Alura Língua" class="container__imagem">
-    <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00</a>
-    <a href="www.alura.com.br"></a>
-    </body>
-</html>
+    <a href="www.alura.com.br"class="container__botao">Assine por 12x de R$ 120,00</a>
+    <a href="www.alura.com.br"class="container__botao_secundario">Assine somente o alura+</a>
+    <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+</div>
+ <section>
+
+ <section class="container secundario">
+    <img src="img/Plataformas.png" alt="um monitor e celular com alura plus aberto" class="secundario__imagem">
+    <div class="container__descricao">
+        <h2 class="descricao__titulo">Assine do seu jeito</h2>
+        <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop celular e outros aparelhos. Nossa seleção de cursos não para de crescer
+            
+    </div>
+
+ </section>
+
+ <section class="container secundario">
+    <div class="container__descricao">
+        <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou potuguês
+        <a href="www.alura.com.br" class="container__botao secundario botao*">Assinar O Combo+</a>
+    </div>
+    <img src="img/Telas.png" alt="Tela do alura+ e do alura língua" class="secundario__imagem">
+ </section>
+
+
+ 
+
+    
+ </body>
+
+    </html>
