--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
-<html lange="en">
+<html>
 
 <head>
-    <title>Alura Plus</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;&display=swap" real="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1,0">
+    <title>AluraBooks</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
-    <selection class="container principal">
-        <div class="container__caixa">
-    <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <ing src="ing/Combo.png" alt="O Combo+ é a junção do Alura+ e Alura Língua" class="container__imagem">
-    <a href="www.alura.com.br"class="container__botao">Assine por 12x de R$ 120,00</a>
-    <a href="www.alura.com.br"class="container__botao_secundario">Assine somente o alura+</a>
-    <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
-</div>
- <section>
-
- <section class="container secundario">
-    <img src="img/Plataformas.png" alt="um monitor e celular com alura plus aberto" class="secundario__imagem">
-    <div class="container__descricao">
-        <h2 class="descricao__titulo">Assine do seu jeito</h2>
-        <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop celular e outros aparelhos. Nossa seleção de cursos não para de crescer
-            
+    <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container">
+            <div class="container" id="menu" class="container__botao">
+                <label for="menu">
+        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+    </label>
+    <ul class="lista-menu">
+        <li class="lista-menu__titulo"></li>
+    </ul>
+        <img src="img/Logo.svg" alt="logo da AluraBooks" class="container__imagem">
     </div>
-
- </section>
-
- <section class="container secundario">
-    <div class="container__descricao">
-        <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou potuguês
-        <a href="www.alura.com.br" class="container__botao secundario botao*">Assinar O Combo+</a>
+    <div class="container">
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carinho de Compras" class="container__imagem"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
     </div>
-    <img src="img/Telas.png" alt="Tela do alura+ e do alura língua" class="secundario__imagem">
- </section>
+    </header>
+</body>
+
+</html>
 
 
- 
 
-    
- </body>
 
-    </html>
+
+
